# cart

./: .gitignore  BUILDING.md  CMakeLists.txt  README  README.md  TODO  standalone.cmake
demo/example/: cart.input
demo/python_example/: getproc  test.py
demo/python_example/inputs/cart/: cart.input
demo/time_spectral/: README.md  cartTS.py
demo/time_spectral/inputs/cart/: cart.input
interface/: CMakeLists.txt  cartInterface.f90  interface.cmake  samarcInterface.f90
interface/python/: cartInterface.py
src/analytics/: analytics.cmake  compute_inf_norm.f90  compute_norm.f90  compute_norm_ts.f90  compute_tke_params.f90
src/bc/: bc.cmake  bc_case.f90  bc_per.f90  periodic_bc.f90
src/driver/: cart.f90  driver.cmake
src/half-baked/: check_gs.f90  check_lusgs.f90  check_lusgs1.f90  fluxJacobianProduct.f90
src/lhs/: adi.f90  blockThomas.f90  ddadi.f90  fjdq.f90  fluxJacobian.f90  fluxJacobianMatVec.f90  gslr.f90  gslr_storage.f90  lhs.cmake  lusgs.f90  lusgs_hyb.f90  lusgs_hyb_col.f90  unrolled_blockThomas.f90  utils.f90
src/partition/: divide1D.f90  factorize.f90  partition.cmake  partitionSpaceTime.f90  spatialCommunication.f90  st  updateAllFringes.f90
src/postprocessing/: postprocessing.cmake  storep3d.f90
src/preprocessing/: init_data.f90  preprocessing.cmake
src/rhs/: convertVariables.f90  filter.f90  flux_jacobian.f90  inviscidRHScentral.f90  inviscidRHSunified.f90  inviscidRHSunified2.f90  inviscidRHSupwind.f90  muscld.f90  navier_stokes_mms.f90  rhs.cmake  roeflxcart.f90  ts_source.f90  velocityGradient.f90  viscousRHS.f90  viscousRHSfast.f90  weno.f90
src/unsupported/: partitionSpaceTime.f90  partitionSpaceTime2.f90
tests/accuracy/: README  verify.input
tests/src/: linearization_test.f90  nscheck.f90
tools/: export.mcr  makejpgs.py  plotStep.py
